@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
-.TH TEXI2DVI "1" "June 2006" "texi2dvi 1.83" "User Commands"
+.TH TEXI2DVI "1" "June 2006" "texi2dvi 1.84" "User Commands"
 .SH NAME
 texi2dvi \- convert Texinfo documents to DVI
 .SH SYNOPSIS
